--- a/packages/postcss-preset-infima/package.json
+++ b/packages/postcss-preset-infima/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/facebookincubator/infima/issues"
   },
   "dependencies": {
+    "@rdil/postcss-color-mod-function": "^3.1.0",
     "postcss": "^8.4.8",
     "postcss-combine-duplicated-selectors": "^10.0.2",
     "postcss-css-variables": "^0.18.0",
